[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/actors/duck/Duck.gd" type="Script" id=1]
[ext_resource path="res://res/themes/theme.tres" type="Theme" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 51.4486

[node name="Duck" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -1.41425, -5.30331 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="GoneTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="DeadAnimationTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="ChangeDirectionTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ValueLabel" type="Label" parent="CanvasLayer"]
margin_left = -30.2906
margin_top = -57.9084
margin_right = 23.7094
margin_bottom = -34.9084
rect_rotation = -9.5
theme = ExtResource( 2 )
text = "100"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Duck_body_entered"]
[connection signal="go_away" from="." to="." method="_on_Duck_go_away"]
[connection signal="shooted" from="." to="." method="_on_Duck_shooted"]
[connection signal="viewport_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_viewport_exited"]
[connection signal="timeout" from="GoneTimer" to="." method="_on_GoneTimer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
